--- a/php7.0/Dockerfile
+++ b/php7.0/Dockerfile
@@ -39,4 +39,4 @@ RUN pecl install xdebug && docker-php-ext-enable xdebug
 RUN docker-php-ext-install zip
 
 # Install composer
-RUN curl -sS https://getcomposer.org/installer | php --install-dir=/usr/local/bin --filename=composer
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
